--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_pull_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_pull_request_blueprint.mdx
@@ -52,9 +52,9 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "repository": {
-      "title": "Repository",
-      "target": "bitbucketRepository",
+    "service": {
+      "title": "Service",
+      "target": "bitbucketService",
       "required": false,
       "many": false
     }
