--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_deployments_and_environments_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_deployments_and_environments_port_app_config.mdx
@@ -43,7 +43,7 @@ resources:
         mappings:
           identifier: .repo + '-' + (.id|tostring)
           title: .task + '-' + .environment
-          blueprint: '"githubDeployment"'
+          blueprint: '"deployment"'
           properties:
             description: .description
             ref: .ref
