--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_environment_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_environment_blueprint.mdx
@@ -1,10 +1,10 @@
 <details>
-<summary>Environment blueprint</summary>
+<summary>Running Service blueprint</summary>
 
 ```json showLineNumbers
 {
   "identifier": "githubRepoEnvironment",
-  "title": "Repository Environment",
+  "title": "Running Service",
   "icon": "Environment",
   "schema": {
     "properties": {
@@ -39,8 +39,8 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "repository": {
-      "target": "githubRepository",
+    "service": {
+      "target": "githubService",
       "required": true,
       "many": false
     }
