--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_git_exporter_example_issue_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_git_exporter_example_issue_blueprint.mdx
@@ -64,8 +64,8 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "repository": {
-      "target": "githubRepository",
+    "service": {
+      "target": "githubService",
       "required": true,
       "many": false
     }
