--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-admins/_github_export_example_repository_with_admins_relation_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-admins/_github_export_example_repository_with_admins_relation_blueprint.mdx
@@ -1,10 +1,10 @@
 <details>
-<summary>Repository blueprint</summary>
+<summary>Service blueprint</summary>
 
 ```json showLineNumbers
 {
   "identifier": "githubRepository",
-  "title": "Repository",
+  "title": "Service",
   "icon": "Microservice",
   "schema": {
     "properties": {
@@ -14,7 +14,7 @@
         "format": "markdown"
       },
       "url": {
-        "title": "Repository URL",
+        "title": "Service URL",
         "type": "string",
         "format": "url"
       }
