--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-admins/_github_exporter_example_admins_users_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-admins/_github_exporter_example_admins_users_port_app_config.mdx
@@ -5,7 +5,7 @@
 ```yaml showLineNumbers
 createMissingRelatedEntities: true
 resources:
-  - kind: repository
+  - kind: service
     selector:
       query: 'true'
       collaborators: true
@@ -14,7 +14,7 @@ resources:
         mappings:
           identifier: .name
           title: .name
-          blueprint: '"githubRepository"'
+          blueprint: '"githubService"'
           properties:
             readme: file://README.md
             url: .html_url
