--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
@@ -77,9 +77,9 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "repository": {
-      "title": "repository",
-      "target": "githubRepository",
+    "service": {
+      "title": "Service",
+      "target": "githubService",
       "required": true,
       "many": false
     }
