--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_git_exporter_example_workflow_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_git_exporter_example_workflow_blueprint.mdx
@@ -53,9 +53,10 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "repository": {
-      "target": "githubRepository",
-      "required": true,
+    "service": {
+      "title": "Service",
+      "target": "githubService",
+      "required": false,
       "many": false
     }
   }
