--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_git_exporter_example_issue_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_git_exporter_example_issue_blueprint.mdx
@@ -56,9 +56,9 @@
     }
   },
   "relations": {
-    "repository": {
-      "target": "gitlabRepository",
-      "title": "Repository",
+    "service": {
+      "target": "gitlabService",
+      "title": "Service",
       "required": true,
       "many": false
     }
