--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-repository-folders/_gitlab_exporter_example_folder_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-repository-folders/_gitlab_exporter_example_folder_blueprint.mdx
@@ -24,9 +24,9 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "repository": {
-      "title": "Repository",
-      "target": "gitlabRepository",
+    "service": {
+      "title": "Service",
+      "target": "gitlabService",
       "required": false,
       "many": false
     }
