--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_repository_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_repository_blueprint.mdx
@@ -1,10 +1,10 @@
 <details>
-<summary>Repository blueprint</summary>
+<summary>Service blueprint</summary>
 
 ```json showLineNumbers
 {
-  "identifier": "bitbucketRepository",
-  "title": "Repository",
+  "identifier": "bitbucketService",
+  "title": "Service",
   "icon": "Microservice",
   "schema": {
     "properties": {
@@ -14,7 +14,7 @@
         "format": "markdown"
       },
       "url": {
-        "title": "Repository URL",
+        "title": "Service URL",
         "type": "string",
         "format": "url"
       },
