--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-branch-protection/_git_exporter_example_branch_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-branch-protection/_git_exporter_example_branch_blueprint.mdx
@@ -45,9 +45,9 @@
   "calculationProperties": {},
   "aggregationProperties": {},
   "relations": {
-    "repository": {
-      "title": "Repository",
-      "target": "githubRepository",
+    "service": {
+      "title": "Service",
+      "target": "githubService",
       "required": false,
       "many": true
     }
