--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_codeScan_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_codeScan_alert_blueprint.mdx
@@ -35,9 +35,9 @@
   "calculationProperties": {},
   "aggregationProperties": {},
   "relations": {
-    "repository": {
-      "title": "Repository",
-      "target": "githubRepository",
+    "service": {
+      "title": "Service",
+      "target": "githubService",
       "required": false,
       "many": true
     }
