--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_pull_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_pull_request_blueprint.mdx
@@ -55,9 +55,9 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "repository": {
-      "title": "Repository",
-      "target": "githubRepository",
+    "service": {
+      "title": "Service",
+      "target": "githubService",
       "required": false,
       "many": false
     }
