--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_exporter_example_repository_with_teams_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_exporter_example_repository_with_teams_port_app_config.mdx
@@ -21,7 +21,7 @@ resources:
             link: .html_url
             permission: .permission
             notification_setting: .notification_setting
-  - kind: repository
+  - kind: service
     selector:
       query: "true" # JQ boolean query. If evaluated to false - skip syncing the object.
       teams: true # Boolean flag to indicate whether to include the repository teams.
@@ -30,7 +30,7 @@ resources:
         mappings:
           identifier: .name
           title: .name
-          blueprint: '"githubRepository"'
+          blueprint: '"githubService"'
           properties:
             readme: file://README.md
             url: .html_url
