--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-groups-subgroups/_gitlab_exporter_example_group_repository_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-groups-subgroups/_gitlab_exporter_example_group_repository_port_app_config.mdx
@@ -28,7 +28,7 @@ resources:
         mappings:
           identifier: .path_with_namespace | gsub(" "; "")
           title: .name
-          blueprint: '"gitlabRepository"'
+          blueprint: '"gitlabService"'
           properties:
             url: .web_url
             readme: file://README.md
