updated dependabot alert URL in mapping example

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
@@ -35,7 +35,7 @@ resources:
             scope: .dependency.scope
             ghsaID: .security_advisory.ghsa_id
             cveID: .security_advisory.cve_id
-            url: .html_urlurl
+            url: .html_url
             references: "[.security_advisory.references[].url]"
           relations:
             repository: .repo.name
