add folder identifiers docs

--- a/docs/api-reference/api-reference.mdx
+++ b/docs/api-reference/api-reference.mdx
@@ -6,4 +6,4 @@ sidebar_label: 🧪 API reference
 
 # 🧪 API reference
 
-You can view and try out Port's REST API interface online by browsing to our [Swagger](https://api.getport.io)
+You can view and try out Port's REST API in our [Swagger](https://api.getport.io) documentation.
